# ComfyUI_FaceAnalysis

./: faceanalysis.py  pyproject.toml  requirements.txt
